--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@supabase/supa base-js": "^2.49.8",
     "@types/webspeechapi": "^0.0.29",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
