--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@
 # dependencies
 /node_modules
 /.pnp
+.pnp.*.json  # ← CORRIGÉ : seulement les fichiers .pnp.json, pas pnpm-lock.yaml
 .env
-.pnp.*
+#.pnp.*
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -32,7 +33,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+#.pnpm-debug.log*
+pnpm-debug.log*  # ← CORRIGÉ : pnpm au lieu de .pnpm
 
 # env files (can opt-in for committing if needed)
 .env*
@@ -46,3 +48,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# pnpm (nouvelle section ajoutée)
+.pnpm-store/*
+
+# Build directories supplémentaires
+/dist
